# obstacle_avoidance

./: .gitignore  configure.ac
src/: Makefile.am  brake.c  brake.h  common.h  constants.h  daemon.c  daemon.h  ipc.c  ipc.h  main.c  modes.c  modes.h  motors.c  motors.h  pathfinder.c  pathfinder.h  pathfinder_a1.c  pathfinder_a1.h  pathfinder_a2.c  pathfinder_a2.h  scheduler.c  scheduler.h  sensors_data.c  sensors_data.h  shared_memory.c  shared_memory.h  stats.c  stats.h  steering.c  steering.h  supervisor.c  supervisor.h
