AM_CFLAGS = -Wall -pedantic

bin_PROGRAMS = obstacle_avoidance
obstacle_avoidance_SOURCES = \
	brake.c \
	daemon.c \
	ipc.c \
	main.c \
	modes.c \
	motors.c \
	pathfinder.c \
	scheduler.c \
	sensors_data.c \
	supervisor.c

noinst_HEADERS = \
	brake.h \
	common.h \
	daemon.h \
	ipc.h \
	modes.h \
	motors.h \
	pathfinder.h \
	scheduler.h \
	sensors_data.h \
	supervisor.h
